<resources>
    <string name="app_name">Adarsha College Dinajpur</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_routine">Routine</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_onlineClasses">Online Classes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>

    <string name="open">open</string>
    <string name="close">close</string>


    <string name="routine_text">Routine</string>
    <string name="routine_text_details">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="notice_text">Notice</string>

    <string name="onlineClasses_text">Online Classes</string>
    <string name="Classes_text">Classes</string>

    <string name="gallery_text">Gallery</string>
    <string name="administration_text">Administration</string>

    <string name="result_text">Result</string>

    <string name="Website_text">Website</string>

    <string name="national_parliament">National Parliament</string>

    <string name="about_dinajpur">About Dinajpur</string>

    <string name="emergency_phone_number">Emergency phone number</string>


    <string name="principal_name">DR. SAYED REDOWANUR RAHMAN</string>
    <string name="principal_address">Adarsha Collage, Dinajpur</string>
    <string name="principal">Principal</string>


    <string name="vice_principal_name">HASINA AKTER BANU</string>
    <string name="vice_principal_address">Adarsha Collage, Dinajpur</string>
    <string name="vice_principal">Vice-Principal</string>
    <string name="admin_login">Admin Login</string>

    <string name="mujib_details">
        মুজিববর্ষ’ হচ্ছে সর্বকালের শ্রেষ্ঠ বাঙালি জাতির পিতা বঙ্গবন্ধু শেখ মুজিবুর রহমানের জন্মশতবার্ষিকী উৎসব। বঙ্গবন্ধুর জন্মের শত বছর উপলক্ষে ২০২০ খ্রিস্টাব্দের ১৭ মার্চ থেকে নানা কর্মসূচির মধ্য দিয়ে এ উৎসব উদযাপন চলছে।এছাড়া এ বছর ২৬ মার্চ বাংলাদেশের স্বাধীনতার সুবর্ণজয়ন্তী।
	স্বাধীন বাংলাদেশের স্থপতি,ইতিহাসের মহানায়ক বঙ্গবন্ধু শেখ মুজিবুর রহমানের জন্মশতবার্ষিকী উৎসব এবং মহান স্বাধীনতার সুবর্ণজয়ন্তীকে স্মরণীয় করতে এই এ্যাপসটিকে উৎসর্গ করা হলো।
    </string>
</resources>