<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#9E9A9A"
        android:orientation="vertical">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:iss_auto_cycle="true"
            android:layout_margin="2dp"
            app:iss_delay="0"
            app:iss_error_image="@drawable/error"
            app:iss_period="1000"
            app:iss_placeholder="@drawable/image_slider"
            app:iss_selected_dot="@drawable/default_selected_dot"
            app:iss_unselected_dot="@drawable/default_unselected_dot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#2196F3"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/home_mujib"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/mujib_image"
                        android:scaleType="fitXY"
                        android:backgroundTint="@color/black"/>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#2196F3"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/home_routine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:src="@drawable/work_schedule" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/routine_text"
                        android:textColor="#fff"
                        android:textSize="22sp"
                        android:textStyle="bold" />
<!--
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/routine_text_details"
                        android:textColor="#fff"
                        android:textSize="18sp" />-->

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#4CAF50"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/home_notice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:src="@drawable/notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/notice_text"
                        android:textColor="#fff"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                <!--    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/routine_text_details"
                        android:textColor="#fff"
                        android:textSize="18sp" />-->

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#FFC107"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/home_online_classes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:src="@drawable/youtube" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/onlineClasses_text"
                        android:textColor="#ffffff"
                        android:textSize="22sp"
                        android:textStyle="bold" />
<!--
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/routine_text_details"
                        android:textColor="#fff"
                        android:textSize="18sp" />-->

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gallery_text"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/galleryImgIV"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                android:src="@drawable/gimage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/administration_text"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#FFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:src="@drawable/principal" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:padding="5dp"
                        android:text="@string/principal_name"
                        android:textColor="@color/gray"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/principal"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/principal_address"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:src="@drawable/vice_principal" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/vice_principal_name"
                        android:textColor="@color/gray"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/vice_principal"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/vice_principal_address"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#4CAF50">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/routineBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/routine_text"
                    android:textAllCaps="false"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/noticeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/notice_text"
                    android:textAllCaps="false"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/classesBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/Classes_text"
                    android:textAllCaps="false"
                    android:textSize="10sp" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</ScrollView>